<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/forget_pass"
        android:textColor="@color/dark"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/sign_up_email"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_phone_24"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetPasswordPhone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/sign_up_phone"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendOTP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/send_link"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendOTP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetPasswordOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/OTP"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/verify_user"
        android:background="@drawable/btn_shape"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />
</androidx.constraintlayout.widget.ConstraintLayout>