<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogInFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_back"
        android:textColor="@color/dark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_to_continue"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="HardcodedText" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:passwordToggleDrawable="@drawable/baseline_show_password_24"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        tools:layout_editor_absoluteX="50dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_shape"
        android:imeOptions="actionDone"
        android:text="Log in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        app:layout_constraintVertical_bias="0.484" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_t_have_account"
        android:textColor="@color/dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_acc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/new_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>