<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/dark"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_subtitle"
            android:textColor="#757575"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            app:boxStrokeColor="@color/dark"
            app:hintTextColor="@color/dark"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_fname"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/dark"
            app:hintTextColor="@color/dark"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:layout_editor_absoluteX="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_lname"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/dark"
            app:hintTextColor="@color/dark"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:layout_editor_absoluteX="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/dark"
            app:hintTextColor="@color/dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/baseline_phone_24"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_phone"
                android:inputType="phone"
                android:maxLength="10"
                android:textColorHint="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:passwordToggleDrawable="@drawable/baseline_show_password_24"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_password"
                android:inputType="textPassword"
                android:textColorHint="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:passwordToggleDrawable="@drawable/baseline_show_password_24"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_con_password"
                android:inputType="textPassword"
                android:textColorHint="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:textColor="@color/white"
            android:elegantTextHeight="false"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up_already_account"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logInBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountBtn"
            tools:ignore="UnknownId" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logInBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="30dp"
            android:layout_marginStart="5dp"
            android:cursorVisible="true"
            android:text="@string/sign_up_log_in"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView3"
            app:layout_constraintTop_toBottomOf="@+id/createAccountBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>