<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add_Item"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/dark"
        android:id="@+id/category_spinner"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"/>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:startIconDrawable="@drawable/baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Item"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:startIconDrawable="@drawable/baseline_description_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description"
            android:inputType="text"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_shape"
        android:imeOptions="actionDone"
        android:text="Add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.24" />

</androidx.constraintlayout.widget.ConstraintLayout>